отрисовка графика без контроля погрешности

--- a/laba1/laba1.vcxproj.filters
+++ b/laba1/laba1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="MyForm.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Solution.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
